<resources>
    <string name="app_name">Мой стартап</string>
    <string name="Training">Обучение</string>
    <string name="no_courses">Доступных курсов пока нет</string>
    <string name="course_direction">Направление курса</string>
    <string name="video">Видео</string>
    <string name="documents">Документы</string>
    <string name="profile">Профиль</string>
    <string name="name">Анна Михайлова</string>
    <string name="ceo">CEO</string>
    <string name="company_name">HighTechCorp</string>
    <string name="description">"Образовательный уровень родителей зачастую влияет на будущее детей больше, чем их успеваемость в школе. "</string>
    <string name="empty">Пока тут пусто</string>
    <string name="profile_in">в</string>
    <string name="label_bottom_sheet_profile">BottomSheetProfile</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="about_app">О приложении</string>
    <string name="legal_documents">Правовые документы</string>
    <string name="cancel">Отменить</string>
    <string name="step_2">Шаг 2</string>
    <string name="proceed">Продолжить</string>

    <string name="fragment_authorization_hello">Добро пожаловать!</string>
    <string name="fragment_authorization_forgot_password">Забыли пароль?</string>
    <string name="fragment_authorization_new_account">Нет аккаунта?</string>
    <string name="fragment_authorization_registration">Зарегистрироваться</string>
    <string name="fragment_authorization_enter">Войти</string>
    <string name="fragment_authorization_password_label">Пароль</string>
    <string name="authorization_bad_data">Неверный email или пароль</string>
    <string name="authorization_no_internet">Ошибка сервера</string>

    <string name="license_agreement">Лицензионое соглашение</string>
    <string name="personal_information">Политика обработки\nперсональных данных</string>

    <string name="my_startup">Мой Стартап</string>
    <string name="version">Версия 2.4.5</string>
    <string name="password_recovery_email">Введите email</string>
    <string name="password_recovery_sand_to">Отправим на него код для восстановления пароля</string>
    <string name="password_recovery_sand">Отправить код</string>
    <string name="password_recovery_user_agreement">Продолжая, вы соглашаетесь с политикой обработки персональных данных и лицензионным соглашением\n</string>
    <string name="password_recovery_save">Сохранить</string>
    <string name="verification_email_set_code">Теперь введите код</string>
    <string name="verification_email_information">Код отправили на email %s</string>
    <string name="password_recovery_new_password_repeat">Повторите новый пароль</string>
    <string name="password_recovery_new_password_input">Введите новый пароль</string>
    <string name="password_recovery_new_password">Новый пароль</string>

    <string name="feed_title">Брейншторм идей и проектов 💡</string>
    <string name="feed_tv_search_text">Название публикации</string>
    <string name="idea">Идея</string>
    <string name="user_name">ФИО</string>
    <string name="set_phone_number">Введите номер телефона</string>
    <string name="agreement">Продолжая, вы соглашаетесь с политикой обработки персональных данных и лицензионным соглашением</string>

    <string name="wrong_email">Неверно введен e-mail</string>
    <string name="feed_search_placeholder">По вашему запросу ничего не нашли</string>
    <string name="more_about_project">Подробнее о проекте</string>
    <string name="comments">Комментарии (%s)</string>
    <string name="add_comment">Добавьте комментарий</string>
    <string name="no_comments_placeholder">Будьте первым, кто оставит комментарий</string>
    <string name="show_more">Показать ещё</string>
    <string name="show_all">Показать всё</string>

    <string name="choose_project_direction">Выберите направление проекта</string>

    <string name="registration">Зарегистрироваться</string>
    <string name="registration_toast_message">не все поля заполнены</string>
    <string name="registration_fragment_registration">Регистрация</string>
    <string name="registration_name_error">Введите имя от 2 до 60 символов</string>
    <string name="registration_email_error">Email введен некорректно</string>
    <string name="registration_password_error">Пароль должен быть не менее 6 символов</string>

    <string name="projects_your_projects">Ваши проекты</string>
    <string name="projects_tell_about_your_project">Расскажите про\nваш проект</string>
    <string name="projects_create_project">Создать проект</string>

    <string name="registration_error">Ошибка сервера</string>
    <string name="upload_photo_or_video">Загрузите фото/видео</string>
    <string name="optional">Необязательно</string>
    <string name="upload_decription">Картинки загружаются в форматах: png, jpg, jpeg. Размер одной картинки не более 3Мб. Видео загружаются в форматах: mp4, mov. Размер одного видео не более 10Мб</string>

    <string name="editing_docks_step_4">Шаг 4</string>
    <string name="editing_docks_attach_docks">Прикрепите файлы, чтобы рассказать о проекте ещё больше. Например, one page, презентацию, отчёты и прочие документы. Необязательно</string>
    <string name="editing_docks_investments_report">Отчёт по инвестициям за I квартал 2024.docx</string>
    <string name="editing_docks_download_dock">Загрузить документ</string>
    <string name="editing_docks_download_hint_text">Документы загружаются в форматах: doc, docx, pdf. Размер одного документа не более 10Мб.</string>
    <string name="editing_docks_continue_loading">Продолжить</string>


    <string name="additional_information">Дополнительная\nинформация о проекте</string>
    <string name="financing_stage">Этап финансирования</string>
    <string name="investments_description">Опишите необходимые инвестиции для проекта></string>
    <string name="investments_description_example">Проекту необходимо 8 млн ₽ на\nразвитие первого этапа (Stage 1 в\nнашей презентации). Срок реализации\nуказан для stage 1</string>
    <string name="terms">Сроки реализации</string>
    <string name="select_date">Выбрать дату</string>
    <string name="date_example">12 марта 2026</string>
    <string name="links">Ссылки</string>
    <string name="link_to_web">Ссылка на сайт</string>
    <string name="link_to_web_example">mystartup.com</string>
    <string name="link_to_app">Ссылка на приложение</string>
    <string name="link_to_app_example">https://apps.apple.com/ru/appmystartup</string>
    <string name="link_to_social_network">Ссылка на соцсеть</string>
    <string name="link_to_social_network_example">vk.com/mystartup</string>
    <string name="step_5">Шаг 5</string>
    <string name="publish">Опубликовать</string>
    <string name="project">Проект</string>
    <string name="project_news">Публикации о проекте (%s)</string>
    <string name="project_details">Подробнее о проекте</string>
    <string name="publication">Публикация</string>
    <string name="additional_information_about_project">Дополнительная информация о проекте</string>

    <!-- FillAboutProjectScreen -->
    <string name="err_pick_photo">Не удалось прикрепить фото</string>
    <string name="create_news">Создать публикацию</string>

    <!-- CourseListScreen -->
    <string name="course_list_lbl_progress_description">Ищем курсы</string>
    <!-- CourseDetailsScreen -->
    <string name="course_details_video_description">Видео - %d</string>
    <string name="course_details_document_description">Документ - %d</string>

    <string name="err_project_info">Ошибка загрузки</string>
    <string name="error_on_get_user_profile_data">Ошибка при получении данных профиля</string>

    <string-array name="chips">
        <item>Всё</item>
        <item>Проекты</item>
        <item>Идеи</item>
    </string-array>

    <string-array name="profile_chips">
        <item>Всё</item>
        <item>Проекты</item>
        <item>Идеи</item>
        <item>Лайкнутые</item>
        <item>Избранное</item>
    </string-array>
    <string name="user_project_details_edit">Редактировать</string>

    <string name="empty_comment">Комментарий не может быть пустым</string>
</resources>