<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:orientation="vertical"
    tools:context=".feature.auth.registration.presentation.RegistrationFragment">

    <com.innoprog.android.uikit.InnoProgTopBarView
        android:id="@+id/registrationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topBar_left_icon="@drawable/ic_back"
        app:topBar_title="@string/registration_fragment_registration" />

    <com.innoprog.android.uikit.InnoProgInputView
        android:id="@+id/ivPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/button_padding_6"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        app:label="@string/set_phone_number" />

    <com.innoprog.android.uikit.InnoProgInputView
        android:id="@+id/ivName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:paddingBottom="@dimen/button_padding_6"
        app:label="@string/user_name" />

    <com.innoprog.android.uikit.InnoProgInputView
        android:id="@+id/ivEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:paddingBottom="@dimen/button_padding_6"
        app:label="@string/email" />

    <com.innoprog.android.uikit.InnoProgInputView
        android:id="@+id/ivPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:paddingBottom="@dimen/button_padding_6"
        app:label="@string/fragment_authorization_password_label" />

    <com.innoprog.android.uikit.InnoProgButtonView
        android:id="@+id/bvRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:gravity="center"
        app:buttonText="@string/registration" />

    <TextView
        android:id="@+id/tvAgreement"
        style="@style/TextCaption_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:gravity="center"
        android:text="@string/agreement" />

</LinearLayout>
