<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".feature.auth.newpassword.presentation.NewPasswordFragment">

    <com.innoprog.android.uikit.InnoProgTopBarView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topBar_title="@string/password_recovery_new_password"
        app:topBar_left_icon="@drawable/ic_back"/>

    <com.innoprog.android.uikit.InnoProgInputView
        android:id="@+id/ivNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:label="@string/password_recovery_new_password_input"  />

    <com.innoprog.android.uikit.InnoProgInputView
        android:id="@+id/ivNewСonfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:label="@string/password_recovery_new_password_repeat" />

    <com.innoprog.android.uikit.InnoProgButtonView
        android:id="@+id/btnBack"
        app:buttonType="primary"
        app:buttonSize="large"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonText="@string/password_recovery_save"
        android:gravity="center"/>

</LinearLayout>