<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:orientation="vertical"
    tools:context=".feature.auth.passwordrecovery.presentation.PasswordRecoveryFragment">

    <com.innoprog.android.uikit.InnoProgTopBarView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topBar_left_icon="@drawable/ic_back"
        app:topBar_title=" " />

    <TextView
        android:id="@+id/tvPasswordRecoveryTitle"
        style="@style/TextHeadline_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:gravity="center"
        android:text="@string/password_recovery_email" />

    <TextView
        android:id="@+id/tvPasswordRecoveryText"
        style="@style/TextBody_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:gravity="center"
        android:text="@string/password_recovery_sand_to" />

    <com.innoprog.android.uikit.InnoProgInputView
        android:id="@+id/ivEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:label="@string/email" />

    <com.innoprog.android.uikit.InnoProgButtonView
        android:id="@+id/btnSendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:gravity="center"
        app:buttonSize="large"
        app:buttonText="@string/password_recovery_sand"
        app:buttonType="primary" />

    <TextView
        android:id="@+id/tvAgreementText"
        style="@style/TextCaption_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:gravity="center"
        android:text="@string/password_recovery_user_agreement" />


</LinearLayout>