<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:orientation="vertical"
    tools:context=".feature.projects.create.presentation.ui.AttachDocksFragment">

    <TextView
        android:id="@+id/docks"
        style="@style/TextHeadline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/documents"
        android:textColor="@color/text_primary"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_hint"
        style="@style/TextBody_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/editing_docks_attach_docks"
        android:textColor="@color/text_secondary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/docks_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_8"
        android:orientation="vertical"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_docks" />

    <com.innoprog.android.uikit.InnoProgButtonView
        android:id="@+id/download_docks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16"
        android:gravity="center_horizontal"
        app:buttonLeftIcon="@drawable/document"
        app:buttonSize="large"
        app:buttonText="@string/editing_docks_download_dock"
        app:buttonTextColor="@color/accent_secondary"
        app:buttonType="def" />

    <TextView
        android:id="@+id/download_hint"
        style="@style/TextCaption_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/editing_docks_download_hint_text"
        android:textColor="@color/text_secondary" />
</LinearLayout>


