<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/uploadPhotoAndVideoTV"
            style="@style/TextHeadline_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:text="@string/upload_photo_or_video"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/optionalTV"
            style="@style/TextBody_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:text="@string/optional"
            android:textColor="@color/text_secondary"
            app:layout_constraintTop_toBottomOf="@id/uploadPhotoAndVideoTV" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/uploadPhotoAndVideoRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@id/optionalTV"
            tools:itemCount="2"
            tools:listitem="@layout/item_image_and_video" />

        <com.innoprog.android.uikit.InnoProgButtonView
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:gravity="center"
            app:buttonLeftIcon="@drawable/ic_add_image"
            app:buttonSize="large"
            app:buttonTextColor="@color/accent_secondary"
            app:buttonType="def"
            app:layout_constraintTop_toBottomOf="@+id/uploadPhotoAndVideoRV"
            tools:buttonText="@string/upload_photo_or_video" />

        <TextView
            android:id="@+id/uploadDescription"
            style="@style/TextCaption_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:text="@string/upload_decription"
            android:textColor="@color/text_secondary"
            app:layout_constraintTop_toBottomOf="@id/uploadButton" />

        <com.innoprog.android.uikit.InnoProgButtonView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:gravity="center"
            app:buttonType="primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadDescription"
            tools:buttonText="@string/proceed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>